# triguard-decoding

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
scripts/: benchmark_ablation.py  benchmark_quality.py  calibrate_gtg.py  calibrate_tri_guard.py
triguard/: __init__.py  critic.py  metrics.py  presets.py  processor.py
