[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triguard"
version = "0.1.0"
description = "Inference-time abstention guard for transformers that prevents confident nonsense via controlled fallback."
readme = "README.md"
authors = [
  { name="Anton", email="anton@example.com" },
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/yourusername/triguard"
